# agentic-cli

./: .agentic.toml  Cargo.toml  INTEGRATION_GUIDE.md  LICENSE  README.md  install_agentic_cli.bat  install_ollama.ps1
config/: settings.yaml
docs/: WARP_ARCHITECTURE.md
keysets/: default_agentic_keybindings.yaml
src/: main.rs
src/agent/: mod.rs  planner.rs
src/commands/: blog.rs  mod.rs  prep.rs  task.rs
src/config/: mod.rs
src/db/: mod.rs
src/keybindings/: keybinding_manager.rs  mod.rs
src/ollama/: client.rs  mod.rs
src/themes/: mod.rs  theme_manager.rs
src/ui/: app.rs  blocks.rs  components.rs  events.rs  layout.rs  mod.rs  performance.rs  styles.rs
src/warp/: agents.rs  config.rs  mod.rs  pipeline.rs  shell_runner.rs
src/workflows/: mod.rs  workflow_manager.rs
themes/standard/: dracula.yaml  nord.yaml
themes/warp_bundled/: agentic_dark.yaml
workflows/docker/: build_and_run_app.yaml
workflows/git/: clone_with_ssh.yaml
workflows/npm/: install_dependencies.yaml
workflows/rust/: create_new_project.yaml
