[package]
name = "agentic-cli"
version = "0.1.0"
edition = "2021"
authors = ["Vinayak Wankhade"]
description = "A Warp-inspired agentic terminal interface"
license = "MIT"

[dependencies]
# TUI libraries
ratatui = "0.26"
crossterm = "0.28"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for OpenAI API
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Colors and styling
colored = "2.0"

# Configuration
dirs = "5.0"

# Unicode handling
unicode-width = "0.1"
